Rework admission numbers across apps
